// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order.tsx bad order and bad item 1`] = `""`;

exports[`Order.tsx bad order and bad item 2`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      pochemy ne go
    </span>
    <span
      id="date"
    >
      228
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div>
      Заказ пуст...
    </div>
  </div>
</div>
`;

exports[`Order.tsx bad order and bad item 3`] = `
<div
  className="Order"
>
  <div
    className="Order-header"
  >
    <span
      className="Order-shop"
    >
      pochemy ne go
    </span>
    <span
      id="date"
    >
      228
    </span>
  </div>
  <div
    className="Order-items"
  >
    <div
      className="Order-item"
      key="0"
    >
      go
    </div>
    <div
      className="Order-item"
      key="1"
    >
      luchshe
    </div>
  </div>
</div>
`;
